test.txt
test
+- run test
   +- compile test Debug native 2 errors
src/main.zig:392:27: error: use of undeclared identifier 'storage'
    const blob_path = try storage.blobPath(std.testing.allocator, blob_dir, upload_id);
                          ^~~~~~~
src/main.zig:476:27: error: use of undeclared identifier 'storage'
    const blob_path = try storage.blobPath(std.testing.allocator, blob_dir, upload_id);
                          ^~~~~~~
error: the following command failed with 2 compilation errors:
/usr/bin/zig test -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep config --dep runtime_config --dep http_helpers --dep ids --dep storage --dep rate_limit --dep reaper --dep options --dep upload --dep download --dep delete -Mroot=/home/strydr/zend/apps/relay/src/main.zig -ODebug --dep packet_types --dep blob_format -Mprotocol=/home/strydr/zend/packages/protocol/src/root.zig -ODebug --dep aead --dep chacha20 --dep poly1305 -Mcrypto=/home/strydr/zend/packages/crypto/src/root.zig -ODebug --dep bitwriter --dep huffman -Mcompress=/home/strydr/zend/packages/compress/src/root.zig -ODebug -Mpacket_types=/home/strydr/zend/packages/protocol/src/packet_types.zig -ODebug --dep packet_types --dep aead --dep huffman -Mblob_format=/home/strydr/zend/packages/protocol/src/blob_format.zig -ODebug --dep chacha20 --dep poly1305 -Maead=/home/strydr/zend/packages/crypto/src/aead.zig -ODebug -Mchacha20=/home/strydr/zend/packages/crypto/src/chacha20.zig -ODebug -Mpoly1305=/home/strydr/zend/packages/crypto/src/poly1305.zig -ODebug -Mbitwriter=/home/strydr/zend/packages/compress/src/bitwriter.zig -ODebug --dep bitwriter -Mhuffman=/home/strydr/zend/packages/compress/src/huffman.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman -Mconfig=/home/strydr/zend/apps/relay/src/config/config.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep config -Mruntime_config=/home/strydr/zend/apps/relay/src/config/runtime_config.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep runtime_config -Mhttp_helpers=/home/strydr/zend/apps/relay/src/http/http_helpers.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman -Mids=/home/strydr/zend/apps/relay/src/storage/ids.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep ids --dep runtime_config -Mstorage=/home/strydr/zend/apps/relay/src/storage/storage.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep runtime_config -Mrate_limit=/home/strydr/zend/apps/relay/src/runtime/rate_limit.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep runtime_config --dep storage --dep config -Mreaper=/home/strydr/zend/apps/relay/src/runtime/reaper.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep http_helpers -Moptions=/home/strydr/zend/apps/relay/src/routes/options.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep http_helpers --dep ids --dep runtime_config --dep storage -Mupload=/home/strydr/zend/apps/relay/src/routes/upload.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep http_helpers --dep runtime_config --dep storage -Mdownload=/home/strydr/zend/apps/relay/src/routes/download.zig -ODebug --dep protocol --dep crypto --dep compress --dep packet_types --dep blob_format --dep aead --dep chacha20 --dep poly1305 --dep bitwriter --dep huffman --dep http_helpers --dep runtime_config --dep storage --dep ids -Mdelete=/home/strydr/zend/apps/relay/src/routes/delete.zig --cache-dir .zig-cache --global-cache-dir /home/strydr/.cache/zig --name test --zig-lib-dir /usr/lib/zig/ --listen=-

Build Summary: 0/3 steps succeeded; 1 failed
test transitive failure
+- run test transitive failure
   +- compile test Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache/o/c7ce94f1ab4aa571524a5eae1ff233ba/build /usr/bin/zig /usr/lib/zig /home/strydr/zend/apps/relay .zig-cache /home/strydr/.cache/zig --seed 0x74b8d9b9 -Z2ed06893650fcb61 test
test
+- zig build test (apps/relay) failure
error: the following command exited with error code 1:
cd /home/strydr/zend/apps/relay && zig build test

Build Summary: 1/3 steps succeeded; 1 failed
test transitive failure
+- zig build test (apps/relay) failure

error: the following build command failed with exit code 1:
.zig-cache/o/838ccce62ac91bae774e34e3598a9c71/build /usr/bin/zig /usr/lib/zig /home/strydr/zend .zig-cache /home/strydr/.cache/zig --seed 0x88cb99e9 -Z0f59d52623325a3b test
